Fix for text not displaying properly on mobile with dark theme.

--- a/src/app/quiz/quiz.component.scss
+++ b/src/app/quiz/quiz.component.scss
@@ -5,3 +5,10 @@
 .answer-clicked{
     --background:#3880ff;
 }
+//added these becasue text is not displaying on mobile with dark mode enabled
+ion-item{
+    color: #737373
+}
+ion-label{
+    color: #737373
+}
